--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-<div class="container">
-	<h1>Di adiós a:</h1>
-	<div class="scroll-window">
-		<div class="fade top-fade"></div>
-		<div class="fade bottom-fade"></div>
-		<ul class="scroll-list">
-			<li style="--clr: var(--clr-slide-1)">Tarjetas de papel que terminan en la basura</li>
-			<li style="--clr: var(--clr-slide-2)">Gastos constantes en reimpresiones</li>
-			<li style="--clr: var(--clr-slide-3)">Información desactualizada e inmodificable</li>
-			<li style="--clr: var(--clr-slide-4)">Perder oportunidades por no tener una tarjeta a mano</li>
-			<li style="--clr: var(--clr-slide-5)">Presentaciones poco innovadoras que no generan impacto</li>
-			<li style="--clr: var(--clr-slide-6)">Acumulación de tarjetas físicas que ocupan espacio</li>
-			<li style="--clr: var(--clr-slide-7)">Falta de profesionalismo e identidad comercial</li>
-		</ul>
-	</div>
-</div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Di adiós a las tarjetas tradicionales</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Di adiós a:</h1>
+        <div class="scroll-window">
+            <div class="fade top-fade"></div>
+            <div class="fade bottom-fade"></div>
+            <ul class="scroll-list">
+                <li style="--clr: var(--clr-slide-1)">Tarjetas de papel que terminan en la basura</li>
+                <li style="--clr: var(--clr-slide-2)">Gastos constantes en reimpresiones</li>
+                <li style="--clr: var(--clr-slide-3)">Información desactualizada e inmodificable</li>
+                <li style="--clr: var(--clr-slide-4)">Perder oportunidades por no tener una tarjeta a mano</li>
+                <li style="--clr: var(--clr-slide-5)">Presentaciones poco innovadoras que no generan impacto</li>
+                <li style="--clr: var(--clr-slide-6)">Acumulación de tarjetas físicas que ocupan espacio</li>
+                <li style="--clr: var(--clr-slide-7)">Falta de profesionalismo e identidad comercial</li>
+            </ul>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
